JK-1466/JK-1467: token-gate path-bearing reads on loopback; create secret files 0600